New user registration

--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -14,6 +14,7 @@
     <table border="1">
         <tbody>
             <th>Transaction ID</th>
+            <th>Date of Purchase</th>
             <th>Ticker</th>
             <th>Company Name</th>
             <th>Quantity</th>
