--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -17,7 +17,7 @@
 					<label for="username">Username</label>
 				</td>
 				<td>
-					<input id="username" type="text" name="username" size="40" required>
+					<input id="username" type="text" name="username" size="20" required>
 				</td>
 			</tr>
             <tr>
@@ -25,7 +25,7 @@
 					<label for="password">Password</label>
 				</td>
 				<td>
-					<input id="password" type="password" name="password" size="40" required>
+					<input id="password" type="password" name="password" size="20" required>
 				</td>
 			</tr>
 			
@@ -33,25 +33,25 @@
 		<button type="submit">Login</button>
 	</form>
 
-	<h2>Not a user?</h2>
+	<h2>Don't have an account?</h2>
 	<h3>Register here!</h3>
 
-	<form data-th-action="@{/addUser}" method="post">
+	<form data-th-action="@{/createUser}" method="post">
 		<table>
 			<tr>
 				<td>
-					<label for="username">Username</label>
+					<label for="username">Enter your username:</label>
 				</td>
 				<td>
-					<input type="text" name="username" size="40" required>
+					<input type="text" name="username" size="20" required>
 				</td>
 			</tr>
             <tr>
 				<td>
-					<label for="password">Password</label>
+					<label for="password">Enter your password:</label>
 				</td>
 				<td>
-					<input type="password" name="password" size="40" required>
+					<input type="password" name="password" size="20" required>
 				</td>
 			</tr>
 			
@@ -59,6 +59,7 @@
         
         <button type="submit">Register</button>
       </form>
+	  <span data-th-text="${messageUser}"></span>
 
 
 
