--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -24,6 +24,15 @@
         </tbody>
     </table>
     <br>
+    <br>
+    <br>
+    <h3>Made a trade recently? Add your purchase here</h3>
+    <form action="">
+        <button style="display: inline" type="submit">Add stock purchase</button>
+    </form>
+    <br>
+    <br>
+    <br>
     <form>
     <button type="submit" formmethod="GET" formaction="/logout">
         Logout
