--- a/src/main/resources/templates/login_error.html
+++ b/src/main/resources/templates/login_error.html
@@ -7,8 +7,7 @@
     <title>Error</title>
 </head>
 <body>
-    <h1>Error!</h1>
-    <a href="/authenticate">Please try again</a>
-
+    <h1>Incorrect username or password!</h1>
+    <a href="/">Please try again</a>
 </body>
 </html>
