--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -40,7 +40,7 @@
     <br>
     <h3>Made a trade recently? Add your purchase here</h3>
     <form 
-        data-th-action="@{authenticate/addTransaction}"
+        data-th-action="@{/addTransaction}"
         method="post"
         style="margin: 0; padding: 0"
      >
