Fixed user registration

--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -67,20 +67,23 @@
       style="display: inline"
       type="number" step="any"
       name="quantity"
+      id="quantity"
       placeholder="Quantity"
-    />
-    <input
-    style="display: inline"
-    type="number" step="0.01"
-    name="stockPrice"
-    placeholder="Price per stock"
-  />
-    <input
-    style="display: inline"
-    type="number" step="0.01"
-    name="totalPrice"
-    placeholder="Total cost of stock purchase"
-    />
+      />
+      <input
+      style="display: inline"
+      type="number" step="0.01"
+      name="stockPrice"
+      id="stock_price"
+      placeholder="Price per stock"
+      />
+      <input
+      style="display: inline"
+      type="number" step="0.01"
+      name="totalPrice"
+      id="total_price"
+      placeholder="Total cost of stock purchase"
+      />
 
     <!-- <input
     style="display: inline"
