--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -32,6 +32,8 @@
             </tr>
         </tbody>
     </table>
-    <!-- <a href="/authenticate">Homepage</a> -->
+    <br>
+    <br>
+    <a href="/homepage">Homepage</a>
 </body>
 </html>
