--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -4,36 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Company</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous">
 </head>
 <body>
-    <h1>Stock Purchase Details</h1>
-    <table border="1">
-        <tbody>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#" th:href="@{/homepage}">StockStatus</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#" th:href="@{/homepage}">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/logout}">Logout</a>
+              </li>
+        <!-- Navbar content -->
+      </nav>
+    <h1 style="text-align:center">Stock Purchase Details</h1>
+    <table class="table" border="1">
+        <thead class="thead-dark">
+        <!-- <tbody> -->
             <!-- <th>Transaction ID</th> -->
-            <th>Date of Purchase</th>
-            <th>Ticker</th>
-            <th>Company Name</th>
-            <th>Quantity</th>
-            <th>Price per share (US$)</th>
-            <th>Total price (US$)</th>
-            <th>Status</th>
-
+            <th style="text-align:center">Date of Purchase</th>
+            <th style="text-align:center">Ticker</th>
+            <th style="text-align:center">Company Name</th>
+            <th style="text-align:center">Quantity</th>
+            <th style="text-align:center">Price per share (US$)</th>
+            <th style="text-align:center">Total price (US$)</th>
+            <th style="text-align:center">Market Value (US$)</th>
+        </thead>
+        <tbody>
             <tr data-th-each="transaction: ${allPurchasesList}">
                     <!-- <td data-th-text="${transaction.getTransactionId}"></td> -->
-                    <td data-th-text="${transaction.getPurchaseDate}"></td>
-                    <td data-th-text="${transaction.getSymbol}"></td>
-                    <td data-th-text="${transaction.getCompanyName}"></td>
-                    <td data-th-text="${transaction.getQuantity}"></td>
-                    <td data-th-text="${transaction.getStockPrice}"></td>
-                    <td data-th-text="${transaction.getTotalPrice}"></td>
-                    <td data-th-text="${transaction.getStockStatus}"></td>
+                    <td style="text-align:center" data-th-text="${transaction.getPurchaseDate}"></td>
+                    <td style="text-align:center" data-th-text="${transaction.getSymbol}"></td>
+                    <td style="text-align:center" data-th-text="${transaction.getCompanyName}"></td>
+                    <td style="text-align:center" data-th-text="${transaction.getQuantity}"></td>
+                    <td style="text-align:center" data-th-text="${transaction.getStockPrice}"></td>
+                    <td style="text-align:center" data-th-text="${transaction.getTotalPrice}"></td>
+                    <td style="text-align:center" data-th-text="${transaction.getStockStatus}"></td>
 
             </tr>
         </tbody>
     </table>
     <br>
     <br>
-    <a href="/homepage">Homepage</a>
+    <!-- <a href="/homepage">Homepage</a> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
