--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -4,12 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 	<title>StockStatus</title>
 </head>
 <body>
 	 <!-- create navigation bar (Header) -->
-	 <nav class="navbar navbar-inverse navbar-fixed-top">
+	 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a style="text-align:center" class="navbar-brand" href="#" >StockStatus</a>
+        <!-- Navbar content -->
+      </nav>
+	 <!-- <nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed"
@@ -22,14 +27,14 @@
 				<a class="navbar-brand" href="#" th:href="@{/}">StockStatus</a>
 			</div>
 		</div>
-	</nav>
+	</nav> -->
     <br>
     <br>
 
 	<!-- Create HTML Login Section-->
     <div class = "container">
-        <div class = "row">
-            <div class = "col-md-6 col-md-offset-3" >
+        <div class = "row ">
+            <div class = "col-md-6 col-md-offset-3" style="text-align:center" >
 
     			<h1>Welcome to StockStatus! </h1>
     
@@ -38,6 +43,7 @@
 				<form method="POST" action="/authenticate">
 					<div class = "form-group">
                         <label class = "control-label" for="username">
+							
                                 Username
                         </label>
                         <input id = "username" class = "form-control" type="text" name="username"  required autofocus="autofocus"/>
@@ -58,6 +64,8 @@
 			</div>
 		</div>
 	</div>
+	<div class="alert alert-info" data-th-text="${messageLogout}"></div>
+	<div class="alert alert-danger" data-th-text="${messageLoginError}"></div>
 
 
 
@@ -116,6 +124,10 @@
 
  -->
 
-	
+  <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
