--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -3,17 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 	<title>StockStatus</title>
-</head>
 <body>
 	 <!-- create navigation bar (Header) -->
-	 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a style="text-align:center" class="navbar-brand" href="#" >StockStatus</a>
+	 <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a style="text-align:center" class="navbar-brand" href="#" >StockStatus</a> -->
         <!-- Navbar content -->
-      </nav>
+      <!-- </nav> -->
 	 <!-- <nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
@@ -34,16 +33,20 @@
 	<!-- Create HTML Login Section-->
     <div class = "container">
         <div class = "row ">
-            <div class = "col-md-6 col-md-offset-3" style="text-align:center" >
+            <div class = "col-md-8 offset-md-3">
 
     			<h1>Welcome to StockStatus! </h1>
     
 				<h2>Please enter your login details</h2>
-
+			</div>
+		</div>
+	</div>
+	<div class = "container">
+		<div class = "row ">
+			<div class="col-sm-6 mx-auto">
 				<form method="POST" action="/authenticate">
 					<div class = "form-group">
                         <label class = "control-label" for="username">
-							
                                 Username
                         </label>
                         <input id = "username" class = "form-control" type="text" name="username"  required autofocus="autofocus"/>
@@ -64,6 +67,7 @@
 			</div>
 		</div>
 	</div>
+			
 	<div class="alert alert-info" data-th-text="${messageLogout}"></div>
 	<div class="alert alert-danger" data-th-text="${messageLoginError}"></div>
 
