--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -49,7 +49,7 @@
                     <td style="text-align:center" data-th-text="${transaction.getQuantity}"></td>
                     <td style="text-align:center" data-th-text="${transaction.getStockPrice}"></td>
                     <td style="text-align:center" data-th-text="${transaction.getTotalPrice}"></td>
-                    <td style="text-align:center" data-th-text="${transaction.getStockStatus}"></td>
+                    <td style="text-align:center; font-weight:bold;" data-th-text="${transaction.getStockStatus}"></td>
 
             </tr>
         </tbody>
