--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -10,7 +10,21 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
     
+    th, td {
+      text-align: left;
+      padding: 8px;
+    }
+    
+    tr:nth-child(even) {
+      background-color: #D6EEEE;
+    }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -38,8 +52,9 @@
                 
     
     <h3 style="text-align:center">My stock purchase history</h3>
-
+    <style></style>
     <table class="table" border="1">
+      
         <thead class="thead-dark">
             <th style="text-align:center">Date of Purchase</th>
             <th style="text-align:center">Ticker</th>
@@ -72,7 +87,7 @@
     <form 
         data-th-action="@{/addTransaction}"
         method="post"
-        style="margin: 0; padding: 0"
+        style="margin: 10; padding: 10"
      >
      <div class = "form-row">
      <div>
